# nvidia-purchase-system

./: .env.example  .gitignore  README.md  TODO.md  nvidia_purchase_coordinator.py  outline.md  outline.txt  requirements.txt
cookie-prep/: Readme.md
cookie-prep/cookie_prep/: browser.py  captcha.py  config.py  cookies.py  curls.txt  session_manager.py  sound.py  utils.py
cookie-prep/src/: browser.py  config.py  main.py  session_manager.py
early-warning/: Cargo.toml  README.md
early-warning/config/: default.toml  default_skus.json  reference_response.json
early-warning/src/: main.rs
product-scanner/: Cargo.toml  README.md
product-scanner/config/: default.toml
product-scanner/src/: execute_purchase.rs  fast_purchase.rs  launch_purchase.rs  main.rs  product_checker.rs  sound.rs
purchase-core/: README.md
purchase-core/src/: purchase_method.py
purchase-core/tests/: Cargo.toml  README.md  fast_purchase.py  fast_purchase.rs  nvidia_store_check.py  nvidia_store_check.rs  nvidia_store_check_min.py  test_client.rs
purchase-core/tests/go/: fast_purchase.go  fast_purchase_go_README.md  run_fast_purchase_go.bat
shared/scripts/: captured_cookies.json  captured_purchase_cookies.json  captured_purchase_cookies_2025-03-25_08-13-53_kN70ZQhn.json  captured_purchase_cookies_2025-03-30_10-16-02_4BgOpwcp.json  captured_purchase_cookies_2025-03-30_13-14-46_vfulZi8U.json  captured_purchase_cookies_2025-03-30_13-17-29_aUigxP39.json  captured_purchase_cookies_2025-04-02_10-05-36_uRec66CF.json  captured_purchase_cookies_2025-04-02_10-10-31_R37stwWj.json  final_page.html  (+24 more)
