[package]
name = "nvidia-fe-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify-rust = "4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
rodio = "0.17.3"
fern = "0.6"
chrono = "0.4"
config = "0.13"
