[package]
name = "product-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
rand = "0.8"
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
ctrlc = "3.4"
rodio = "0.17"