[package]
name = "nvidia-store-check"
version = "0.1.0"
edition = "2021"

[dependencies]
attohttpc = { version = "0.26", features = ["json", "tls-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[[bin]]
name = "nvidia-store-check"
path = "nvidia_store_check.rs" 

[[bin]]
name = "fast-purchase"
path = "fast_purchase.rs"